# VSat

./: .gitignore  README.md  TODOs.org  issue_template.md
agda/: shell.nix  (+3 more)
haskell/: .gitignore  Aptfile  Dockerfile  Makefile  Procfile  R.nix  README.md  auto_comp_timings.csv  auto_core_timings.csv  auto_counts.csv  auto_dead_core_timings.csv  auto_dead_timings.csv  auto_diagnostics.csv  auto_raw.csv  auto_timings.csv  auto_vtop.csv  baselines.html  bench_commands.txt  bfDesc.csv  buildz3.sh  default.nix  desc_results.csv  docker-compose  fin_comp_timings.csv  fin_core_timings.csv  fin_counts.csv  fin_dead_core_timings.csv  fin_dead_timings.csv  fin_diagnostics.csv  fin_parallel_timings.csv  fin_raw.csv  fin_rq3.csv  fin_timings.csv  infosForPaul.txt  package.yaml  profile-shell.nix  result  shell.nix  stack.yaml  testoutput  (+7 more)
haskell/R/: plots.R
haskell/app/: Main.hs
haskell/bench/: AutoBench.hs  Baselines.hs  Core.hs  Main.hs
haskell/bench/AutoBench/: Main.hs  vsat_small_chunk.json  vsat_small_example.json
haskell/bench/AutoCore/: Main.hs
haskell/bench/AutoDead/: Main.hs
haskell/bench/AutoDeadCore/: Main.hs
haskell/bench/AutoDiag/: Main.hs
haskell/bench/AutoVariate/: Main.hs
haskell/bench/Bench/: Core.hs
haskell/bench/BusyBox/: BruteForce.hs  BusyBox.hs  Incremental.hs  Main.hs
haskell/bench/FinCore/: Main.hs
haskell/bench/FinDead/: Main.hs
haskell/buildScripts/: howtobuild.txt
haskell/data/: 2018-04-29_bfDesc_results.csv  2018-04-29_timing_results.csv  2018-05-01_bfDesc_results.csv  2018-05-01_timing_results.csv  2018-05-08_desc_result_noCrit.csv  2018-05-08_timing_result_noCrit.csv  2018-05-10-desc-results-fstsol.csv  2018-05-10-desc-results.csv  2018-05-10-timing_results.csv  2018-05-10-timing_results_fstsol.csv  2018-05-20-desc-results_wBF.csv  2018-05-20-timing_results_wBF.csv  2018-05-21-desc-results_shareWUniques.csv  2018-05-21-desc-results_sharedOnly.csv  2018-05-21-timing_results_shareWUniques.csv  2018-05-21-timing_results_sharedOnly.csv  2018-05-22-desc-results_wBF.csv  2018-05-22-timing_results_wBF.csv  2018-5-25-desc-results_UniSh.csv  2018-5-25-desc-results_wBF.csv  2018-5-25-desc-results_wBF_UniSh.csv  2018-5-25-timing_results_UniSh.csv  2018-5-25-timing_results_wBF.csv  2018-5-25-timing_results_wBF_.csv  2018-5-25-timing_results_wBF_UniSh.csv  2018-5-26-desc_results_Sh.csv  2018-5-26-timing_results_Sh.csv  2018-5-29-desc-results_UniSh.csv  2018-5-29-timing_results_UniSh.csv  2018-5-30-desc-results_UniSh.csv  2018-5-30-desc-results_byChc.csv  2018-5-30-timing_results_UniSh.csv  2018-5-30-timing_results_byChc.csv  2018-9-29-desc_results.csv  2018-9-29-timing_results.csv  autoTimes.md  auto_comp_data.csv  auto_core_data.csv  auto_counts.csv  auto_data.csv  (+25 more)
haskell/examples/: primitives.md
haskell/julia/: autoPlotting.R  compressionPlots.R  data.csv  deadCore.R  finPlotting.R  plotting.R  sigTest.R  timing.R  timing.jl  timingMunger.jl
haskell/munged_data/: auto.csv  auto_comp.csv  auto_deadcore.csv  auto_raw.csv  auto_raw_singletons.csv  auto_singletons.csv  fin_variate_timings.csv  fin_variate_timings_raw.csv  financial.csv  financial_comp.csv  financial_deadcore.csv  financial_raw.csv  financial_raw_singletons.csv  financial_singletons.csv
haskell/nix/: R.nix  default.nix  nixos-20-03.nix  nixpkgs-01-10.nix  profile-shell.nix  shell.nix
haskell/plots/: auto_cascade  financial_cascade
haskell/raw_data/: auto.csv  auto_comp.csv  auto_deadcore.csv  auto_raw.csv  auto_raw_singletons.csv  auto_singletons.csv  fin_variate_timings.csv  fin_variate_timings_raw.csv  financial.csv  financial_comp.csv  financial_deadcore.csv  financial_raw.csv  financial_raw_singletons.csv  financial_singletons.csv
haskell/src/: Api.hs  BST.hs  CNF.hs  Config.hs  Gen.hs  Json.hs  NVProp.hs  Opts.hs  Parser.hs  Prop.hs  Result.hs  Run.hs  SAT.hs  Server.hs  SubProcess.hs  TagTree.hs  Utils.hs  V.hs  VProp.hs
haskell/statisticsScripts/: deadCore.R  parseRaw.jl  plotting.R  rq1.R  rq12_tests.R  rq1_plots.R  rq2.R  rq3_plots.R  rq4.R  rq4_plots.R  rq4_tests.R  sigTest.R  vmodel.R
haskell/test/: Gen.hs  Spec.hs
(+79 files in other folders)
