name:                vsat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/vsat#readme
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Young
maintainer:          youngjef@oregonstate.edu
copyright:           2017 Jeffrey Young
category:            Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VProp, Utils, Run, SAT, V
  default-extensions:          NamedFieldPuns
                             , OverloadedStrings
                             , FlexibleContexts
                             , DeriveFunctor
                             , DeriveGeneric
                             , BangPatterns
                             , GeneralizedNewtypeDeriving
                             , FlexibleInstances
                             , DeriveDataTypeable
                             , UnicodeSyntax

  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , mtl
                     , turtle >= 1.3
                     , text
                     , unix
                     , foldl
                     , bifunctors
                     , QuickCheck
                     , deepseq
                     , sbv

  default-language:    Haskell2010

executable vsat
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  build-depends:       base
                     , vsat
                     , criterion
  default-language:    Haskell2010

benchmark baselines
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Baselines.hs
  build-depends:       base
                     , vsat
                     , criterion
  ghc-options:         -O2 -threaded -fno-full-laziness
  default-language:    Haskell2010

test-suite vsat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vsat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vsat
